--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -43,9 +43,8 @@
     "packageAliases": {
         "crm-platform-henvendelse": "04t2o000000ySSdAAM",
         "crm-community-base": "04t2o000000ySHpAAM",
-        "crm-journal-utilities": "04t2o000000ySSYAA2",
-        "crm-platform-base": "04t2o000000ySSOAA2",
-        "crm-platform-access-control": "04t2o000000ySEMAA2",
-        "skrivtiloss": "0Ho2o000000fxXaCAI"
+        "crm-journal-utilities": "04t2o000000ySTgAAM",
+        "crm-platform-base": "04t2o000000ySSxAAM",
+        "crm-platform-access-control": "04t2o000000ySEMAA2"
     }
 }
