--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -44,7 +44,7 @@
         "crm-platform-henvendelse": "04t2o000000ySSdAAM",
         "crm-community-base": "04t2o000000ySHpAAM",
         "crm-journal-utilities": "04t2o000000ySTgAAM",
-        "crm-platform-base": "04t2o000000ySSxAAM",
+        "crm-platform-base": "0Ho2o0000008ORmCAM",
         "crm-platform-access-control": "04t2o000000ySEMAA2"
     }
 }
