--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -20,7 +20,7 @@
                     "versionNumber": "0.68.0.LATEST"
                 },
                 {
-                    "package": "crm-platform-henvendelse",
+                    "package": "crm-henvendelse",
                     "versionNumber": "0.1.0.LATEST"
                 },
                 {
@@ -41,11 +41,11 @@
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "47.0",
     "packageAliases": {
-        "crm-platform-henvendelse": "04t2o000000ySSdAAM",
-        "crm-community-base": "04t2o000000ySHpAAM",
-        "crm-journal-utilities": "04t2o000000ySTgAAM",
+        "crm-henvendelse": "0Ho2o000000fxXfCAI",
+        "crm-community-base": "0Ho2o0000008OSzCAM",
+        "crm-journal-utilities": "0Ho2o000000fxXkCAI",
         "crm-platform-base": "0Ho2o0000008ORmCAM",
-        "crm-platform-access-control": "04t2o000000ySEMAA2",
+        "crm-platform-access-control": "0Ho2o0000008OR3CAM",
         "crm-sto": "0Ho2o000000fxXpCAI"
     }
 }
