--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -55,6 +55,9 @@
         },
         "liveAgentSettings": {
             "enableLiveAgent": true
+        },
+        "omniChannelSettings": {
+            "enableOmniChannel": true
         }
     }
 }
