ADded Skillbased to definition

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -57,7 +57,8 @@
             "enableLiveAgent": true
         },
         "omniChannelSettings": {
-            "enableOmniChannel": true
+            "enableOmniChannel": true,
+            "enableOmniSkillsRouting": true
         }
     }
 }
