--- a/config/ssdx-config.json
+++ b/config/ssdx-config.json
@@ -3,7 +3,7 @@
         "dummy-data": "dummy-data",
         "users": "config/users",
         "manifest": "manifest",
-        "unpackagable": "unpackagable",
+        "unpackagable": "",
         "package-key": ".ssdx/.packageKey"
     },
     "permsets_to_assign": ["Arbeidsgiver_Base_Group", "Arbeidsgiver_Admin_Group", "Create_reports_and_dashboards"]
