--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -9,7 +9,7 @@
             "dependencies": [
                 {
                     "package": "crm-platform-base",
-                    "versionNumber": "0.123.0.LATEST"
+                    "versionNumber": "0.124.0.LATEST"
                 },
                 {
                     "package": "crm-platform-integration",
@@ -28,8 +28,12 @@
                     "versionNumber": "0.70.0.LATEST"
                 },
                 {
+                    "package": "crm-shared-user-notification",
+                    "versionNumber": "0.1.0.LATEST"
+                },
+                {
                     "package": "crm-henvendelse",
-                    "versionNumber": "0.14.0.LATEST"
+                    "versionNumber": "0.15.0.LATEST"
                 },
                 {
                     "package": "crm-community-base",
@@ -49,6 +53,7 @@
         "crm-platform-access-control": "0Ho2o0000008OR3CAM",
         "crm-platform-integration": "0Ho2o0000008ORrCAM",
         "crm-platform-oppgave": "0Ho2o000000fxXzCAI",
+        "crm-shared-user-notification": "0Ho2o000000fxY4CAI",
         "crm-sto": "0Ho2o000000fxXpCAI"
     }
 }
