--- a/config/ssdx-config.json
+++ b/config/ssdx-config.json
@@ -6,5 +6,5 @@
         "unpackagable": "",
         "package-key": ".ssdx/.packageKey"
     },
-    "permsets_to_assign": ["Arbeidsgiver_Base_Group", "Arbeidsgiver_Admin_Group", "Create_reports_and_dashboards"]
+    "permsets_to_assign": ["Messaging_Read_and_Write_Messages_and_Threads", "Skriv_til_Oss", "Skriv_til_oss_Service_Cloud_tilgang"]
 }
