--- a/.github/workflows/push_quick-package-create1.yml
+++ b/.github/workflows/push_quick-package-create1.yml
@@ -57,12 +57,56 @@ jobs:
       packageId: ${{ steps.package-version-create.outputs.packageId }}
       alphaVersionNumber: ${{ steps.package-version-create.outputs.alphaVersionNumber }}
 
+  # ################################################################# # 
+  # ####################### VALIDATE IN SIT ######################### #
+  # ################################################################# #
+  validate-in-sit:
+    name: Validate install in SIT Sandbox
+    needs: [create-package]
+    runs-on: ubuntu-latest
+    steps:
+      # Checkout source code
+      - name: Checkout source code
+        uses: actions/checkout@v2
+
+      # Install SFDX
+      - name: Install SFDX
+        uses: sfdx-actions/setup-sfdx@v1
+
+      # Authenticate prod
+      - name: Authenticate prod
+        run: |
+          echo ${{ secrets.PROD_SFDX_URL}} > ./PROD_SFDX_URL.txt
+          sfdx auth:sfdxurl:store -f ./PROD_SFDX_URL.txt -a devhub -d
+          rm -f ./PROD_SFDX_URL.txt
+
+      # Authenticate integration-sandbox
+      - name: Authenticate integration-sandbox
+        run: |
+          echo ${{ secrets.INTEGRATION_SANDBOX_SFDX_URL}} > ./INTEGRATION_SANDBOX_SFDX_URL.txt
+          sfdx auth:sfdxurl:store -f ./INTEGRATION_SANDBOX_SFDX_URL.txt -a integration-sandbox -s
+          rm -f ./INTEGRATION_SANDBOX_SFDX_URL.txt
+
+      # Install new package version into integration org
+      - name: Install new package version into integration org
+        id: integration-installation
+        run: |
+          sfdx force:package:install --package ${{ needs.create-package.outputs.packageId }} -w 20 -b 20 -u integration-sandbox -r -k ${{ secrets.PACKAGE_KEY }} --json | tee output
+
+          echo "::set-output name=installOutput::$(cat output | jq '.message')"
+          if [ $(cat output | jq '.status') == "0" ]; then
+            echo "::set-output name=successfullyInstalled::true"
+          fi
+    outputs:
+      successfullyInstalled: ${{ steps.integration-installation.outputs.successfullyInstalled }}
+      installOutput: ${{ steps.integration-installation.outputs.installOutput }}
+
   # ################################################################# #
   # ######################### CREATE RELEASE ######################## #
   # ################################################################# #
   create-release:
     name: Create alpha release
-    needs: [create-package]
+    needs: [create-package, validate-in-sit]
     runs-on: ubuntu-latest
     steps:
       # Checkout source code
@@ -82,6 +126,12 @@ jobs:
           echo "::set-output name=bodyPackage::${{ needs.create-package.outputs.packageId }}"
 
           echo "::set-output name=packageCreation::✅ Package Creation"
+
+           if [ ${{ needs.validate-in-sit.outputs.successfullyInstalled }} == "true" ]; then
+            echo "::set-output name=integrationInstallation::✅ Package Installation (Integration Sandbox)"
+          else
+            echo "::set-output name=integrationInstallation::❌ Package Installation (Integration Sandbox)"
+          fi
 
       # Generate changelog from commits
       - name: Generate changelog
@@ -106,6 +156,7 @@ jobs:
             **Author**: ${{ github.actor }}
 
             ${{ steps.release-fields.outputs.packageCreation }}
+            ${{ steps.release-fields.outputs.integrationInstallation }}
 
             ## Changelog
 
