--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -59,6 +59,7 @@
         "omniChannelSettings": {
             "enableOmniChannel": true,
             "enableOmniSkillsRouting": true
-        }
+        },
+        "chatterSettings": { "enableChatter": true }
     }
 }
