--- a/.github/workflows/push_quick-package-create1.yml
+++ b/.github/workflows/push_quick-package-create1.yml
@@ -80,18 +80,18 @@ jobs:
           sfdx auth:sfdxurl:store -f ./PROD_SFDX_URL.txt -a devhub -d
           rm -f ./PROD_SFDX_URL.txt
 
-      # Authenticate integration-sandbox
-      - name: Authenticate integration-sandbox
+      # Authenticate uat-sandbox
+      - name: Authenticate uat-sandbox
         run: |
-          echo ${{ secrets.INTEGRATION_SANDBOX_SFDX_URL}} > ./INTEGRATION_SANDBOX_SFDX_URL.txt
-          sfdx auth:sfdxurl:store -f ./INTEGRATION_SANDBOX_SFDX_URL.txt -a integration-sandbox -s
-          rm -f ./INTEGRATION_SANDBOX_SFDX_URL.txt
+          echo ${{ secrets.UAT_SFDX_URL}} > ./UAT_SFDX_URL.txt
+          sfdx auth:sfdxurl:store -f ./UAT_SFDX_URL.txt -a uat-sandbox -s
+          rm -f ./UAT_SFDX_URL.txt
 
       # Install new package version into integration org
       - name: Install new package version into integration org
         id: integration-installation
         run: |
-          sfdx force:package:install --package ${{ needs.create-package.outputs.packageId }} -w 20 -b 20 -u integration-sandbox -r -k ${{ secrets.PACKAGE_KEY }} --json | tee output
+          sfdx force:package:install --package ${{ needs.create-package.outputs.packageId }} -w 20 -b 20 -u uat-sandbox -r -k ${{ secrets.PACKAGE_KEY }} --json | tee output
 
           echo "::set-output name=installOutput::$(cat output | jq '.message')"
           if [ $(cat output | jq '.status') == "0" ]; then
