--- a/.github/workflows/push_synch-branches.yml
+++ b/.github/workflows/push_synch-branches.yml
@@ -27,7 +27,7 @@ jobs:
       #Adding empty commit with skip ci message to override CI on push to branches
       - name: Synchronize DEV branch
         run: |  
-          git switch -c DEV
+          git switch -C DEV
           git commit --allow-empty -m "skip ci"
           git pull 
           git push
