--- a/.github/workflows/push_synch-branches.yml
+++ b/.github/workflows/push_synch-branches.yml
@@ -29,7 +29,7 @@ jobs:
         run: |  
           git switch DEV
           git commit --allow-empty -m "skip ci"
-          git rebase orirgin/master
+          git rebase origin/master
           git pull
           git push
       
