--- a/.github/workflows/push_synch-branches.yml
+++ b/.github/workflows/push_synch-branches.yml
@@ -29,8 +29,7 @@ jobs:
         run: |  
           git switch DEV
           git commit --allow-empty -m "skip ci"
-          git rebase origin/master
-          git pull
+          git merge -X theirs orirgin/master
           git push
       
       # Synchronize UAT branch
