--- a/.github/workflows/push_synch-branches.yml
+++ b/.github/workflows/push_synch-branches.yml
@@ -29,7 +29,7 @@ jobs:
         run: |  
           git switch -C DEV
           git commit --allow-empty -m "skip ci"
-          git merge -X theirs orirgin/master
+          git merge -X theirs origin/master
           git push origin DEV
       
       # Synchronize UAT branch
