--- a/.github/workflows/push_synch-branches.yml
+++ b/.github/workflows/push_synch-branches.yml
@@ -29,7 +29,7 @@ jobs:
         run: |  
           {
             git switch DEV
-            git pull
+            git merge -X theirs origin/DEV
           } ||
           {
             git switch -c DEV
