--- a/.github/workflows/push_synch-branches.yml
+++ b/.github/workflows/push_synch-branches.yml
@@ -16,31 +16,35 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v2
 
-      # Init
+       # Init
       - name: Init git
         run: |
           git fetch origin
-          git config --local user.email "branchsyncher@github.com"
-          git config --local user.name "Default branch syncher"
 
       # Synchronize DEV branch
       #Adding empty commit with skip ci message to override CI on push to branches
       - name: Synchronize DEV branch
         run: |  
-          git checkout master
-          git pull
-
-          git merge origin/DEV || git checkout -b DEV
-          git commit --allow-empty -m "skip ci"
+          {
+            git switch DEV
+            git merge -X theirs origin/DEV
+          } ||
+          {
+            git switch -c DEV
+          }
+          git merge -X theirs origin/master --allow-unrelated-histories
           git push origin DEV
       
       # Synchronize UAT branch
       #Adding empty commit with skip ci message to override CI on push to branches
       - name: Synchronize UAT branch
         run: |
-          git checkout master
-          git pull  
-          
-          git merge origin/UAT || git checkout -b UAT
-          git commit --allow-empty -m "skip ci"
+          {
+            git switch UAT
+            git merge -X theirs origin/UAT
+          } ||
+          {
+            git switch -c UAT
+          }
+          git merge -X theirs origin/master --allow-unrelated-histories
           git push origin UAT
