--- a/config/ssdx-config.json
+++ b/config/ssdx-config.json
@@ -3,8 +3,12 @@
         "dummy-data": "dummy-data",
         "users": "config/users",
         "manifest": "manifest",
-        "unpackagable": "",
+        "unpackagable": "unpackaged",
         "package-key": ".ssdx/.packageKey"
     },
-    "permsets_to_assign": ["Messaging_Read_and_Write_Messages_and_Threads", "Skriv_til_Oss", "Skriv_til_oss_Service_Cloud_tilgang"]
+    "permsets_to_assign": [
+        "Messaging_Read_and_Write_Messages_and_Threads",
+        "Skriv_til_Oss",
+        "Skriv_til_oss_Service_Cloud_tilgang"
+    ]
 }
