--- a/.github/workflows/DEV_PR_Merge_quick-package-create1.yml
+++ b/.github/workflows/DEV_PR_Merge_quick-package-create1.yml
@@ -96,6 +96,12 @@ jobs:
           echo "::set-output name=installOutput::$(cat output | jq '.message')"
           if [ $(cat output | jq '.status') == "0" ]; then
             echo "::set-output name=successfullyInstalled::true"
+          else
+            echo
+            echo FAILED TO INSTALL PACKAGE IN DEV SANDBOX
+            echo
+
+            exit 125
           fi
     outputs:
       successfullyInstalled: ${{ steps.integration-installation.outputs.successfullyInstalled }}
