--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -41,6 +41,9 @@
         "nameSettings": {
             "enableMiddleName": true
         },
+        "entitlementSettings": {
+            "enableEntitlements": true
+        },
         "fieldServiceSettings": {
             "fieldServiceOrgPref": true,
             "doesShareSaParentWoWithAr": false,
