--- a/.github/workflows/DEV_PR_Merge_quick-package-create1.yml
+++ b/.github/workflows/DEV_PR_Merge_quick-package-create1.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Delete unpackagable
         run: |
           rm -rf ./force-app/unpackagable
-          mv ./force-app/unpackagable-with-auto-deploy/ .
+          rm -rf ./force-app/unpackagable-with-auto-deploy
           rm -rf ./force-app/scratch-org
 
       # Create package version
@@ -107,9 +107,9 @@ jobs:
       # Deploy unpackagable content
       - name: Deploy unpackagable content
         run: |
-          if [ -d "./unpackagable-with-auto-deploy" ]; then
-            echo "Starting deployment of ./unpackagable-with-auto-deploy"
-            sfdx force:source:deploy -p ./unpackagable-with-auto-deploy -l RunLocalTests
+          if [ -d "./force-app/unpackagable-with-auto-deploy" ]; then
+            echo "Starting deployment of ./force-app/unpackagable-with-auto-deploy"
+            sfdx force:source:deploy -p ./force-app/unpackagable-with-auto-deploy -l RunLocalTests
           fi
     outputs:
       successfullyInstalled: ${{ steps.integration-installation.outputs.successfullyInstalled }}
