Updates scratch settings

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -62,7 +62,8 @@
         },
         "omniChannelSettings": {
             "enableOmniChannel": true,
-            "enableOmniSkillsRouting": true
+            "enableOmniSkillsRouting": true,
+            "enableOmniSecondaryRoutingPriority": true
         }
     }
 }
