--- a/.github/workflows/UAT_PR_Merge_quick-package-create1.yml
+++ b/.github/workflows/UAT_PR_Merge_quick-package-create1.yml
@@ -87,9 +87,9 @@ jobs:
           sfdx auth:sfdxurl:store -f ./UAT_SFDX_URL.txt -a uat-sandbox -s
           rm -f ./UAT_SFDX_URL.txt
 
-      # Install new package version into integration org
-      - name: Install new package version into integration org
-        id: integration-installation
+      # Install new package version into UAT org
+      - name: Install new package version into UAT org
+        id: uat-installation
         run: |
           sfdx force:package:install --package ${{ needs.create-package.outputs.packageId }} -w 20 -b 20 -u uat-sandbox -r -k ${{ secrets.PACKAGE_KEY }} --json | tee output
 
@@ -112,8 +112,8 @@ jobs:
             sfdx force:source:deploy -p ./force-app/unpackagable-with-auto-deploy -l RunLocalTests
           fi
     outputs:
-      successfullyInstalled: ${{ steps.integration-installation.outputs.successfullyInstalled }}
-      installOutput: ${{ steps.integration-installation.outputs.installOutput }}
+      successfullyInstalled: ${{ steps.uat-installation.outputs.successfullyInstalled }}
+      installOutput: ${{ steps.uat-installation.outputs.installOutput }}
 
   # ################################################################# #
   # ######################### CREATE RELEASE ######################## #
