Ignore field restriction rules

--- a/.forceignore
+++ b/.forceignore
@@ -2,6 +2,7 @@
 # profiles
 # ----------------------------------------------------------------------------------------
 **/profiles/*
+**/fieldRestrictionRules/*
 
 
 # NOTE!! Do NOT use **/ before
