--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -9,15 +9,15 @@
             "dependencies": [
                 {
                     "package": "crm-platform-base",
-                    "versionNumber": "0.146.0.LATEST"
+                    "versionNumber": "0.151.0.LATEST"
                 },
                 {
                     "package": "crm-platform-integration",
-                    "versionNumber": "0.69.0.LATEST"
+                    "versionNumber": "0.71.0.LATEST"
                 },
                 {
                     "package": "crm-journal-utilities",
-                    "versionNumber": "0.13.0.LATEST"
+                    "versionNumber": "0.14.0.LATEST"
                 },
                 {
                     "package": "crm-platform-oppgave",
@@ -25,7 +25,7 @@
                 },
                 {
                     "package": "crm-platform-access-control",
-                    "versionNumber": "0.70.0.LATEST"
+                    "versionNumber": "0.83.0.LATEST"
                 },
                 {
                     "package": "crm-shared-flowComponents",
@@ -33,15 +33,19 @@
                 },
                 {
                     "package": "crm-shared-user-notification",
-                    "versionNumber": "0.3.0.LATEST"
+                    "versionNumber": "0.15.0.LATEST"
                 },
                 {
                     "package": "crm-henvendelse",
-                    "versionNumber": "0.53.0.LATEST"
+                    "versionNumber": "0.56.0.LATEST"
                 },
                 {
                     "package": "crm-community-base",
                     "versionNumber": "0.48.0.LATEST"
+                },
+                {
+                    "package": "crm-nks-base-components",
+                    "versionNumber": "0.2.0.LATEST"
                 },
                 {
                     "package": "crm-nks-chat",
@@ -65,6 +69,7 @@
         "crm-shared-user-notification": "0Ho2o000000fxY4CAI",
         "crm-shared-flowComponents": "0Ho2o000000fxYJCAY",
         "crm-nks-chat": "0Ho7U000000000GSAQ",
+        "crm-nks-base-components": "0Ho7U000000000LSAQ",
         "crm-sto": "0Ho2o000000fxXpCAI"
     }
 }
