--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -15,6 +15,7 @@
         "ProcessBuilder",
         "API",
         "ServiceCloud",
+        "Knowledge",
         "LiveAgent",
         "LightningServiceConsole",
         "ContactsToMultipleAccounts",
@@ -37,6 +38,10 @@
         },
         "languageSettings": {
             "enableTranslationWorkbench": true
+        },
+        "knowledgeSettings": {
+            "enableKnowledge": true,
+            "enableLightningKnowledge": true
         },
         "nameSettings": {
             "enableMiddleName": true
