--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,7 @@
     },
     "diffEditor.ignoreTrimWhitespace": true,
     "files.exclude": {
-        "**/*.cls-meta.xml": true,
+        "**/*.cls-meta.xm": true,
         "**/*.trigger-meta.xml": true
     },
     "search.exclude": {
@@ -28,5 +28,12 @@
         "**/.sfdx": true,
         "**/.vscode": true,
         "**/.idea": true
-    }
+    },
+    "unpackagable.location": "/unpackaged",
+    "scratch.default.permissionsets": [
+        "Messaging_Read_and_Write_Messages_and_Threads",
+        "Skriv_til_Oss",
+        "Skriv_til_oss_Service_Cloud_tilgang",
+        "Scratch_Permissions"
+    ]
 }
