--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,7 @@
     },
     "diffEditor.ignoreTrimWhitespace": true,
     "files.exclude": {
-        "**/*.cls-meta.xm": true,
+        "**/*.cls-meta.xml": true,
         "**/*.trigger-meta.xml": true
     },
     "search.exclude": {
