--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -9,35 +9,39 @@
             "dependencies": [
                 {
                     "package": "crm-platform-base",
-                    "versionNumber": "0.154.0.LATEST"
+                    "versionNumber": "0.168.0.LATEST"
                 },
                 {
                     "package": "crm-platform-integration",
-                    "versionNumber": "0.78.0.LATEST"
-                },
-                {
-                    "package": "crm-journal-utilities",
-                    "versionNumber": "0.16.0.LATEST"
-                },
-                {
-                    "package": "crm-platform-oppgave",
-                    "versionNumber": "0.22.0.LATEST"
-                },
-                {
-                    "package": "crm-platform-access-control",
                     "versionNumber": "0.83.0.LATEST"
                 },
                 {
+                    "package": "crm-journal-utilities",
+                    "versionNumber": "0.17.0.LATEST"
+                },
+                {
                     "package": "crm-shared-flowComponents",
-                    "versionNumber": "0.2.0.LATEST"
+                    "versionNumber": "0.3.0.LATEST"
+                },
+                {
+                    "package": "crm-platform-oppgave",
+                    "versionNumber": "0.40.0.LATEST"
+                },
+                {
+                    "package": "crm-platform-access-control",
+                    "versionNumber": "0.102.0.LATEST"
                 },
                 {
                     "package": "crm-shared-user-notification",
-                    "versionNumber": "0.15.0.LATEST"
+                    "versionNumber": "0.17.0.LATEST"
+                },
+                {
+                    "package": "crm-henvendelse-base",
+                    "versionNumber": "0.8.0.LATEST"
                 },
                 {
                     "package": "crm-henvendelse",
-                    "versionNumber": "0.58.0.LATEST"
+                    "versionNumber": "0.79.0.LATEST"
                 },
                 {
                     "package": "crm-community-base",
@@ -45,11 +49,11 @@
                 },
                 {
                     "package": "crm-nks-base-components",
-                    "versionNumber": "0.2.0.LATEST"
+                    "versionNumber": "0.6.0.LATEST"
                 },
                 {
                     "package": "crm-nks-chat",
-                    "versionNumber": "0.1.0.LATEST"
+                    "versionNumber": "0.7.0.LATEST"
                 }
             ]
         }
@@ -59,6 +63,7 @@
     "sourceApiVersion": "54.0",
     "packageAliases": {
         "crm-henvendelse": "0Ho2o000000fxXfCAI",
+        "crm-henvendelse-base": "0Ho7U000000000kSAA",
         "crm-community-base": "0Ho2o0000008OSzCAM",
         "crm-journal-utilities": "0Ho2o000000fxXkCAI",
         "crm-platform-base": "0Ho2o0000008ORmCAM",
