--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -40,6 +40,10 @@
                     "versionNumber": "0.15.0.LATEST"
                 },
                 {
+                    "package": "crm-henvendelse-base",
+                    "versionNumber": "0.8.0.LATEST"
+                },
+                {
                     "package": "crm-henvendelse",
                     "versionNumber": "0.80.0.LATEST"
                 },
@@ -62,7 +66,6 @@
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "54.0",
     "packageAliases": {
-        "crm-henvendelse-base": "0Ho7U000000000kSAA",
         "crm-henvendelse": "0Ho2o000000fxXfCAI",
         "crm-henvendelse-base": "0Ho7U000000000kSAA",
         "crm-community-base": "0Ho2o0000008OSzCAM",
