--- a/.github/workflows/push_create-package1.yml
+++ b/.github/workflows/push_create-package1.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Create package version
         id: package-version-create
         run: |
-          sfdx force:package:beta:version:create -f config/project-scratch-def.json -p $(cat sfdx-project.json | jq '.packageDirectories | map(select(.package != null))[0].package' -r) -k ${{ secrets.PACKAGE_KEY }} -w 90 -c --json | tee output
+          sfdx force:package:version:create -f config/project-scratch-def.json -p $(cat sfdx-project.json | jq '.packageDirectories | map(select(.package != null))[0].package' -r) -k ${{ secrets.PACKAGE_KEY }} -w 90 -c --json | tee output
 
           if [ $(cat output |jq '.status') == "1" ]; then
             exit 125
