Ignore dxmate folder

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,9 @@ install.cmd
 **/deployment_tmp*
 **/dummy-data/*.out/*
 
+# DXmate
+# ----------------------------------------------------------------------------------------
+dxmate_config
 
 # SFDX
 # ----------------------------------------------------------------------------------------
