Enable survey in scratch

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -65,6 +65,9 @@
         "liveAgentSettings": {
             "enableLiveAgent": true
         },
+        "surveySettings": {
+            "enableSurvey": true
+        },
         "omniChannelSettings": {
             "enableOmniChannel": true,
             "enableOmniSkillsRouting": true,
