Adds replacement for header env

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -64,7 +64,20 @@
     ],
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "54.0",
+    "sourceApiVersion": "57.0",
+    "replacements": [
+        {
+            "glob": "force-app/unpackagable-with-auto-deploy/experiences/Innboks1/themes/buildYourOwnLWR.json",
+            "stringToReplace": "\"Dev\"",
+            "replaceWithEnv": "HEADER_ENV_REPLACER",
+            "replaceWhenEnv": [
+                {
+                    "env": "DEPLOY_DESTINATION",
+                    "value": "PROD"
+                }
+            ]
+        }
+      ],
     "packageAliases": {
         "crm-henvendelse": "0Ho2o000000fxXfCAI",
         "crm-henvendelse-base": "0Ho7U000000000kSAA",
