--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,8 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+# misc
+.*.sw?
+Session.vim
+TAGS
+tags
