--- a/.github/workflows/helper_deploy_to_production.yml
+++ b/.github/workflows/helper_deploy_to_production.yml
@@ -11,9 +11,10 @@ jobs:
   deploy-to-production:
     name: Deploy to Production
     uses: navikt/crm-workflows-base/.github/workflows/deployPackage.yml@master
+    permissions:
+      contents: read
     with:
       packageId: ${{ inputs.packageId }}
       org: prod
       unpackagable: ./force-app/unpackagable-with-auto-deploy
-      SFDX_ENV: HEADER_ENV_REPLACER='"Prod"' DEPLOY_DESTINATION=PROD
     secrets: inherit
