--- a/.github/workflows/helper_deploy_to_production.yml
+++ b/.github/workflows/helper_deploy_to_production.yml
@@ -17,4 +17,5 @@ jobs:
       packageId: ${{ inputs.packageId }}
       org: prod
       unpackagable: ./force-app/unpackagable-with-auto-deploy
+      SFDX_ENV: HEADER_ENV_REPLACER='"Prod"' DEPLOY_DESTINATION=PROD
     secrets: inherit
