--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "private": true,
     "scripts": {
-        "lint": "npm run lint:lwc && npm run lint:aura",
+        "lint": "eslint **/lwc/** **/aura/**",
         "lint:lwc": "eslint **/lwc/**",
         "lint:aura": "eslint **/aura/**",
         "test": "npm run lint && npm run test:unit",
