--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -49,7 +49,7 @@
                 },
                 {
                     "package": "crm-henvendelse",
-                    "versionNumber": "0.119.0.LATEST"
+                    "versionNumber": "0.119.0.3"
                 },
                 {
                     "package": "crm-nks-base-components",
