--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,3 +3,4 @@
 # @navikt/team-nks will be requested for
 # review when someone opens a pull request.
 *       @navikt/team-nks
+*       @navikt/teamnks
