--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "activateMock": "sfdx force:apex:execute -f post-scratch/activateMock.cls",
         "deactivateMock": "sfdx force:apex:execute -f post-scratch/deactivateMock.cls",
         "scratchSetup": "sfdx force:apex:execute -f post-scratch/scratchSetup.cls && sf apex execute -f post-scratch/serviceResource.cls",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "mac:build": "bash bin/install-scratch.sh"
     },
     "engines": {
         "node": ">= 16.0.0",
