--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
         "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
         "prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
         "postinstall": "node bin/check-version.js",
-        "activateMock": "sfdx force:apex:execute -f post-scratch/activateMock.cls",
-        "deactivateMock": "sfdx force:apex:execute -f post-scratch/deactivateMock.cls",
-        "scratchSetup": "sfdx force:apex:execute -f post-scratch/scratchSetup.cls && sf apex execute -f post-scratch/serviceResource.cls",
+        "activateMock": "sf apex run -f post-scratch/activateMock.cls",
+        "deactivateMock": "sf apex run -f post-scratch/deactivateMock.cls",
+        "scratchSetup": "sf apex run -f post-scratch/scratchSetup.cls && sf apex execute -f post-scratch/serviceResource.cls",
         "prepare": "husky install"
     },
     "engines": {
