--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -13,7 +13,7 @@
                 },
                 {
                     "package": "crm-platform-reporting",
-                    "versionNumber": "0.38.0.LATEST"
+                    "versionNumber": "0.36.0.LATEST"
                 },
                 {
                     "package": "crm-henvendelse-base",
@@ -21,11 +21,11 @@
                 },
                 {
                     "package": "crm-platform-integration",
-                    "versionNumber": "0.109.0.LATEST"
+                    "versionNumber": "0.100.0.LATEST"
                 },
                 {
                     "package": "crm-journal-utilities",
-                    "versionNumber": "0.29.0.LATEST"
+                    "versionNumber": "0.27.0.LATEST"
                 },
                 {
                     "package": "crm-shared-flowComponents",
@@ -49,11 +49,11 @@
                 },
                 {
                     "package": "crm-henvendelse",
-                    "versionNumber": "0.123.0.LATEST"
+                    "versionNumber": "0.124.0.1"
                 },
                 {
                     "package": "crm-nks-base-components",
-                    "versionNumber": "0.50.0.LATEST"
+                    "versionNumber": "0.31.0.LATEST"
                 },
                 {
                     "package": "crm-nks-chat",
@@ -68,7 +68,7 @@
     ],
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "58.0",
+    "sourceApiVersion": "57.0",
     "replacements": [
         {
             "glob": "force-app/unpackagable-with-auto-deploy/experiences/Innboks1/themes/buildYourOwnLWR.json",
