--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -13,7 +13,7 @@
                 },
                 {
                     "package": "crm-platform-reporting",
-                    "versionNumber": "0.36.0.LATEST"
+                    "versionNumber": "0.37.0.LATEST"
                 },
                 {
                     "package": "crm-henvendelse-base",
@@ -21,7 +21,7 @@
                 },
                 {
                     "package": "crm-platform-integration",
-                    "versionNumber": "0.100.0.LATEST"
+                    "versionNumber": "0.109.0.LATEST"
                 },
                 {
                     "package": "crm-journal-utilities",
@@ -53,7 +53,7 @@
                 },
                 {
                     "package": "crm-nks-base-components",
-                    "versionNumber": "0.31.0.LATEST"
+                    "versionNumber": "0.51.0.3"
                 },
                 {
                     "package": "crm-nks-chat",
