--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "postinstall": "node bin/check-version.js",
         "activateMock": "sf apex run -f post-scratch/activateMock.cls",
         "deactivateMock": "sf apex run -f post-scratch/deactivateMock.cls",
-        "scratchSetup": "sf apex run -f post-scratch/scratchSetup.cls && sf apex run -f post-scratch/serviceResource.cls",
+        "scratchSetup": "sf apex run -f post-scratch/scratchSetup.cls && sf apex run -f post-scratch/serviceResource.cls && sf apex run -f dummy-data/GenerateData.apex",
         "prepare": "husky install"
     },
     "engines": {
